--- a/Group-A/index.html
+++ b/Group-A/index.html
@@ -139,51 +139,54 @@
           </div>
 
           <div class="right-side">
-            <div class="wrapper">
-              <h4>Home</h4>
-              <ul>
-                <li>
-                  <a href="#">
-                    <span>Benefits</span>
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <span>Our Courses</span>
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <span>Our Testimonials</span>
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <span>Our FAQ</span>
-                  </a>
-                </li>
-              </ul>
+            <div class="info-wrapper">
+              <div class="wrapper">
+                <h4>Home</h4>
+                <ul>
+                  <li>
+                    <a href="#">
+                      <span>Benefits</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <span>Our Courses</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <span>Our Testimonials</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <span>Our FAQ</span>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+              <div class="wrapper">
+                <h4>About Us</h4>
+                <ul>
+                  <li>
+                    <a href="#">
+                      <span>Company</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <span>Achievements</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <span>Our Goals</span>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </div>
-            <div class="wrapper">
-              <h4>About Us</h4>
-              <ul>
-                <li>
-                  <a href="#">
-                    <span>Company</span>
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <span>Achievements</span>
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <span>Our Goals</span>
-                  </a>
-                </li>
-              </ul>
-            </div>
+            
             <div class="wrapper">
               <h4>Social Profiles</h4>
               <div class="social-wrapper">
