Index main introduction complete and did some minor changes overall

--- a/Group-A/index.html
+++ b/Group-A/index.html
@@ -105,6 +105,61 @@
       </div>
     </header>
 
+    <main>
+      <div class="container">
+
+        <div class="introduction">
+          <div class="wrapper">
+            <div class="h2-container">
+
+              <div class="introduction-effect">
+                <img src="./assets/icons/main-introduction-effect.svg" alt="introduction effect">
+              </div>
+              <div class="bolt-img">
+                <img src="./assets/icons/introduction-bolt.svg" alt="bolt img">
+              </div>
+              <h2><span>Unlock </span>Your Creative Potential</h2>
+            </div>
+            <h3>with Online Design and Development Courses.</h3>
+            <p>Learn from Industry Experts and Enhance Your Skills.</p>
+          </div>
+          <div class="btn-container">
+            <button>Explore Courses</button>
+            <button>View Pricing</button>
+          </div>
+        </div>
+
+        <div class="sponsor-container">
+          <div class="img-container">
+            <img src="./assets/icons/zapier-logo.svg" alt="zapier logo">
+          </div>
+          <div class="img-container">
+            <img src="./assets/icons/spotify-logo.svg" alt="spotify logo">
+          </div>
+          <div class="img-container">
+            <img src="./assets/icons/zoom-logo.svg" alt="zoom logo">
+          </div>
+          <div class="img-container">
+            <img src="./assets/icons/amazon-logo.svg" alt="amazon logo">
+          </div>
+          <div class="img-container">
+            <img src="./assets/icons/adobe-logo.svg" alt="adobe logo">
+          </div>
+          <div class="img-container">
+            <img src="./assets/icons/notion-logo.svg" alt="notion logo">
+          </div>
+          <div class="img-container">
+            <img src="./assets/icons/netflix-logo.svg" alt="netflix logo">
+          </div>
+        </div>
+
+        <div class="index-main-image">
+          <img src="./assets/images/index-main-top.png" alt="Image">
+        </div>
+
+      </div>
+    </main>
+
     <footer>
       <div class="container">
         <div class="top-side">
