--- a/Group-A/index.html
+++ b/Group-A/index.html
@@ -104,7 +104,46 @@
 
       </div>
     </header>
-
+     <main>
+        <div class="container">
+            <div class="heading">
+                <h2>Online Courses on Design and Development</h2>
+                <p>Welcome to our online course page, where you can enhance your skills in design and development. Choose from our carefully curated selection of 10 courses designed to provide you with comprehensive knowledge and practical experience. Explore the courses below and find the perfect fit for your learning journey.</p>
+            </div>
+            <div class="sub-container">
+                <div class="top">
+                <div class="paragraph">
+                    <div class="paragraph-info">
+                <h4>Web Design Fundamentals</h4>
+                <p>Learn the fundamentals of web design, including HTML, CSS, and responsive design principles. Develop the skills to create visually appealing and user-friendly websites.</p>
+            </div>
+                <button>View Course</button>
+            </div>
+                <div class="images">
+                    <img src="./assets/images/Image.png" alt="1">
+                    <img src="./assets/images/Image.png" alt="2">
+                    <img src="./assets/images/Image.png" alt="3">
+                </div>
+                <div class="buttons">
+                    <div class="left">
+                        <button>4 Weeks</button>
+                        <button>Beginner</button>
+                    </div>
+                    <p>By John Smith</p>
+                </div>
+            </div>
+            <div class="bottom">
+                <div class="heading">
+                    <p>Curriculum</p>
+                </div>
+                <div class="cards">
+                    <h3>01</h3>
+                    <span>Introduction to HTML</span>
+                </div>
+            </div>
+            </div>
+        </div>
+     </main>
     <footer>
       <div class="container">
         <div class="top-side">
