desktop is ready

--- a/Group-A/index.html
+++ b/Group-A/index.html
@@ -121,8 +121,8 @@
             </div>
                 <div class="images">
                     <img src="./assets/images/Image.png" alt="1">
-                    <img src="./assets/images/Image.png" alt="2">
-                    <img src="./assets/images/Image.png" alt="3">
+                    <img src="./assets/images/Image (1).png" alt="2">
+                    <img src="./assets/images/Image (2).png" alt="3">
                 </div>
                 <div class="buttons">
                     <div class="left">
@@ -137,12 +137,231 @@
                     <p>Curriculum</p>
                 </div>
                 <div class="cards">
+                    <div class="card-info">
                     <h3>01</h3>
                     <span>Introduction to HTML</span>
+                </div>
+                <div class="card-info">
+                    <h3>02</h3>
+                    <span>Styling with CSS</span>
+                </div>
+                <div class="card-info">
+                    <h3>03</h3>
+                    <span>Introduction to Responsive Design</span>
+                </div>
+                <div class="card-info">
+                    <h3>04</h3>
+                    <span>Design Principles for Web</span>
+                </div>
+                <div class="card-info">
+                    <h3>05</h3>
+                    <span>Building a Basic Website</span>
+                </div>
+                </div>
+            </div>
+            </div>
+            <div class="sub-container">
+                <div class="top">
+                <div class="paragraph">
+                    <div class="paragraph-info">
+                <h4>UI/UX Design</h4>
+                <p>Master the art of creating intuitive user interfaces (UI) and enhancing user experiences (UX). Learn design principles, wireframing, prototyping, and usability testing techniques.</p>
+            </div>
+                <button>View Course</button>
+            </div>
+                <div class="images">
+                    <img src="./assets/images/Image (3).png" alt="1">
+                    <img src="./assets/images/Image (4).png" alt="2">
+                    <img src="./assets/images/Image (5).png" alt="3">
+                </div>
+                <div class="buttons">
+                    <div class="left">
+                        <button>6 Weeks</button>
+                        <button>Intermediate</button>
+                    </div>
+                    <p>By John Smith</p>
+                </div>
+            </div>
+            <div class="bottom">
+                <div class="heading">
+                    <p>Curriculum</p>
+                </div>
+                <div class="cards">
+                    <div class="card-info">
+                    <h3>01</h3>
+                    <span>Introduction to UI/UX Design</span>
+                </div>
+                <div class="card-info">
+                    <h3>02</h3>
+                    <span>User Research and Personas</span>
+                </div>
+                <div class="card-info">
+                    <h3>03</h3>
+                    <span>Wireframing and Prototyping</span>
+                </div>
+                <div class="card-info">
+                    <h3>04</h3>
+                    <span>Visual Design and Branding</span>
+                </div>
+                <div class="card-info">
+                    <h3>05</h3>
+                    <span>Usability Testing and Iteration</span>
+                </div>
+                </div>
+            </div>
+            </div>
+            <div class="sub-container">
+                <div class="top">
+                <div class="paragraph">
+                    <div class="paragraph-info">
+                <h4>Mobile App Development</h4>
+                <p>Dive into the world of mobile app development. Learn to build native iOS and Android applications using industry-leading frameworks like Swift and Kotlin.</p>
+            </div>
+                <button>View Course</button>
+            </div>
+                <div class="images">
+                    <img src="./assets/images/Image (6).png" alt="1">
+                    <img src="./assets/images/Image (7).png" alt="2">
+                    <img src="./assets/images/Image (8).png" alt="3">
+                </div>
+                <div class="buttons">
+                    <div class="left">
+                        <button>8 Weeks</button>
+                        <button>Intermediate</button>
+                    </div>
+                    <p>By John Smith</p>
+                </div>
+            </div>
+            <div class="bottom">
+                <div class="heading">
+                    <p>Curriculum</p>
+                </div>
+                <div class="cards">
+                    <div class="card-info">
+                    <h3>01</h3>
+                    <span>Introduction to Mobile App Development</span>
+                </div>
+                <div class="card-info">
+                    <h3>02</h3>
+                    <span>Fundamentals of Swift Programming (iOS)</span>
+                </div>
+                <div class="card-info">
+                    <h3>03</h3>
+                    <span>Fundamentals of Kotlin Programming (Android)</span>
+                </div>
+                <div class="card-info">
+                    <h3>04</h3>
+                    <span>Building User Interfaces</span>
+                </div>
+                <div class="card-info">
+                    <h3>05</h3>
+                    <span>App Deployment and Testing</span>
+                </div>
+                </div>
+            </div>
+            </div>
+            <div class="sub-container">
+                <div class="top">
+                <div class="paragraph">
+                    <div class="paragraph-info">
+                <h4>Graphic Design for Beginners</h4>
+                <p>Discover the fundamentals of graphic design, including typography, color theory, layout design, and image manipulation techniques. Create visually stunning designs for print and digital media.</p>
+            </div>
+                <button>View Course</button>
+            </div>
+                <div class="images">
+                    <img src="./assets/images/Image (9).png" alt="1">
+                    <img src="./assets/images/Image (10).png" alt="2">
+                    <img src="./assets/images/Image (11).png" alt="3">
+                </div>
+                <div class="buttons">
+                    <div class="left">
+                        <button>10 Weeks</button>
+                        <button>Beginner</button>
+                    </div>
+                    <p>By Sarah Thompson</p>
+                </div>
+            </div>
+            <div class="bottom">
+                <div class="heading">
+                    <p>Curriculum</p>
+                </div>
+                <div class="cards">
+                    <div class="card-info">
+                    <h3>01</h3>
+                    <span>Introduction to Graphic Design</span>
+                </div>
+                <div class="card-info">
+                    <h3>02</h3>
+                    <span>Typography and Color Theory</span>
+                </div>
+                <div class="card-info">
+                    <h3>03</h3>
+                    <span>Layout Design and Composition</span>
+                </div>
+                <div class="card-info">
+                    <h3>04</h3>
+                    <span>Image Editing and Manipulation</span>
+                </div>
+                <div class="card-info">
+                    <h3>05</h3>
+                    <span>Designing for Print and Digital Media</span>
+                </div>
+                </div>
+            </div>
+            </div>
+            <div class="sub-container">
+                <div class="top">
+                <div class="paragraph">
+                    <div class="paragraph-info">
+                <h4>Front-End Web Development</h4>
+                <p>Become proficient in front-end web development. Learn HTML, CSS, JavaScript, and popular frameworks like Bootstrap and React. Build interactive and responsive websites.</p>
+            </div>
+                <button>View Course</button>
+            </div>
+                <div class="images">
+                    <img src="./assets/images/Image (12).png" alt="1">
+                    <img src="./assets/images/Image (13).png" alt="2">
+                    <img src="./assets/images/Image (14).png" alt="3">
+                </div>
+                <div class="buttons">
+                    <div class="left">
+                        <button>10 Weeks</button>
+                        <button>Intermediate</button>
+                    </div>
+                    <p>By Michael Adams</p>
+                </div>
+            </div>
+            <div class="bottom">
+                <div class="heading">
+                    <p>Curriculum</p>
+                </div>
+                <div class="cards">
+                    <div class="card-info">
+                    <h3>01</h3>
+                    <span>HTML Fundamentals</span>
+                </div>
+                <div class="card-info">
+                    <h3>02</h3>
+                    <span>CSS Styling and Layouts</span>
+                </div>
+                <div class="card-info">
+                    <h3>03</h3>
+                    <span>JavaScript Basics</span>
+                </div>
+                <div class="card-info">
+                    <h3>04</h3>
+                    <span>Building Responsive Websites</span>
+                </div>
+                <div class="card-info">
+                    <h3>05</h3>
+                    <span>Introduction to Bootstrap and React</span>
+                </div>
                 </div>
             </div>
             </div>
         </div>
+        
      </main>
     <footer>
       <div class="container">
