--- a/Group-A/index.html
+++ b/Group-A/index.html
@@ -79,7 +79,7 @@
       </div>
     </div>
   </header>
-  <!-- <main>
+  <main>
     <div class="container">
       <div class="main-about">
         <h2>About Skillbridge</h2>
@@ -90,8 +90,96 @@
           knowledge needed to succeed in the ever-evolving digital landscape.</p>
       </div>
     </div>
-    <div class="line"></div> -->
-
+    <div class="line"></div>
+    <div class="container">
+      <div class="main-achieve">
+        <div class="achieve-info">
+          <h2>Achievements</h2>
+          <p>Our commitment to excellence has led us to
+            achieve significant milestones along our journey.
+            Here are some of
+            our notable achievements</p>
+        </div>
+        <div class="achieve-items">
+          <div class="item">
+            <img src="./assets/icons/crown.svg" alt="crown">
+            <h4>Trusted by Thousands</h4>
+            <p>We have successfully served thousands of students, helping them unlock their potential and achieve their
+              career goals.
+            </p>
+          </div>
+          <div class="item">
+            <img src="./assets/icons/medal.svg" alt="medal">
+            <h4>Award-Winning Courses</h4>
+            <p>Our courses have received recognition and accolades in the industry for their quality, depth of content,
+              and effective teaching methodologies.
+            </p>
+          </div>
+          <div class="item">
+            <img src="./assets/icons/mask.svg" alt="mask">
+            <h4>Positive Student Feedback</h4>
+            <p>We take pride in the positive feedback we receive from our students, who appreciate the practicality and
+              relevance of our course materials.
+            </p>
+          </div>
+          <div class="item">
+            <img src="./assets/icons/pack.svg" alt="pack">
+            <h4>Industry Partnerships</h4>
+            <p>We have established strong partnerships with industry leaders, enabling us to provide our students with
+              access to the latest tools and technologies
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="main-goals">
+        <div class="goals-info">
+          <h2>Our Goals</h2>
+          <p>At SkillBridge, our goal is to empower individuals from all backgrounds to thrive in the world of design
+            and development. We believe that education should be accessible and transformative, enabling learners to
+            pursue their passions and make a meaningful impact.
+            Through our carefully crafted courses, we aim to</p>
+        </div>
+        <div class="goals-items">
+          <div class="item">
+            <img src="./assets/icons/pack.svg" alt="pack">
+            <h4>Provide Practical Skills</h4>
+            <p>We focus on delivering practical skills that are relevant to the current industry demands. Our courses
+              are designed to equip learners with the knowledge and tools needed to excel in their chosen field.
+            </p>
+          </div>
+          <div class="item">
+            <img src="./assets/icons/book.svg" alt="book">
+            <h4>Foster Creative Problem-Solving</h4>
+            <p>We encourage creative thinking and problem-solving abilities, allowing our students to tackle real-world
+              challenges with confidence and innovation.
+            </p>
+          </div>
+          <div class="item">
+            <img src="./assets/icons/puzzle.svg" alt="puzzle">
+            <h4>Promote Collaboration and Community</h4>
+            <p>We believe in the power of collaboration and peer learning. Our platform fosters a supportive and
+              inclusive community where learners can connect, share insights, and grow together.
+            </p>
+          </div>
+          <div class="item">
+            <img src="./assets/icons/beacon.svg" alt="beacon">
+            <h4>Stay Ahead of the Curve</h4>
+            <p>The digital landscape is constantly evolving, and we strive to stay at the forefront of industry trends.
+              We regularly update our course content to ensure our students receive the latest knowledge and skills.
+            </p>
+          </div>
+        </div>
+        <div class="goals-footer">
+          <div class="goals-footer-text">
+            <h4><span>Together</span>, let's shape the future of digital innovation</h4>
+            <p>Join us on this exciting learning journey and unlock your potential in design and development.</p>
+          </div>
+          <img src="./assets/icons/goalsFooter.svg" alt="goalsFooter">
+          <button>Join Now</button>
+        </div>
+      </div>
+    </div>
+  </main>
   <footer>
     <div class="container">
       <div class="top-side">
