--- a/Group-A/about.html
+++ b/Group-A/about.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./index.css" />
+  <link rel="stylesheet" href="./about.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
@@ -136,7 +136,7 @@
           <h2>Our Goals</h2>
           <p>At SkillBridge, our goal is to empower individuals from all backgrounds to thrive in the world of design
             and development. We believe that education should be accessible and transformative, enabling learners to
-            pursue their passions and make a meaningful impact.
+            pursue their passions and make a meaningful impact. <br>
             Through our carefully crafted courses, we aim to</p>
         </div>
         <div class="goals-items">
