--- a/Group-A/about.html
+++ b/Group-A/about.html
@@ -136,7 +136,7 @@
           <h2>Our Goals</h2>
           <p>At SkillBridge, our goal is to empower individuals from all backgrounds to thrive in the world of design
             and development. We believe that education should be accessible and transformative, enabling learners to
-            pursue their passions and make a meaningful impact. <br>
+            pursue their passions and make a meaningful impact.
             Through our carefully crafted courses, we aim to</p>
         </div>
         <div class="goals-items">
